K6 testing local 1VUS_30Sec

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "DBMS for Reviews&Ratings",
   "main": "server/index.js",
   "scripts": {
-    "start": "nodemon server/index.js",
+    "start": "npx nodemon--watch server server/index.js",
     "test": "test"
   },
   "repository": {
