--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "DBMS for Reviews&Ratings",
   "main": "server/index.js",
   "scripts": {
-    "start": "npx nodemon--watch server server/index.js",
-    "test": "test"
+    "start":"node server/app.js",
+    "server-dev": "npx nodemon server/app.js",
+    "test": "jest --verbose",
+    "coverage": "npx open ./coverage/lcov-report/index.html"
   },
   "repository": {
     "type": "git",
@@ -30,6 +32,12 @@
     "pg": "^8.11.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.22.1",
+    "@babel/node": "^7.22.1",
+    "@babel/preset-env": "^7.22.2",
+    "babel-jest": "^29.5.0",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22"
   }
 }
