--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server/app.js",
     "server-dev": "npx nodemon server/app.js",
     "K6": "k6 run /Users/ericlee/HackReactor/Reviews-Backend/server/load_k6/k6_local.js",
-    "newRelic": "node -r newrelic server/app.js"
+    "newRelic": "node -r newrelic server/app.js",
+    "schema": "psql -d sdcreviews -a -f server/database/schema.sql"
   },
   "repository": {
     "type": "git",
